--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,52 @@
                             göstərmək üçün bizə müraciət edə bilərsiniz.
                         </p>
                     </div>
+                    <div class="">
+                        <div class="row social-media">
+                            <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
+                                <div class=" whatsapp-icon">
+                                    <span>
+                                        <a href="#">
+
+                                            <i class="fa-brands fa-whatsapp"></i></span>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
+                                <div class="instagram-icon">
+                                    <span>
+                                        <a href="#">
+                                            <i class="fa-brands fa-instagram"></i></span>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <!--  -->
+                            <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
+                                <div class="facebook-icon">
+                                    <span><a href="#">
+                                            <i class="fa-brands fa-facebook"></i></span>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <!--  -->
+                        </div>
+                        <div class="">
+                            <div class="row contact-icons">
+                                <div class="col-md-6">
+                                    <i class="fa-solid fa-envelope text-primary"></i>
+                                    <span style="color: #89939D;">aliyavarguluzada@gmail.com</span>
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="fa-solid fa-phone text-primary"></i>
+                                    <span style="color: #89939D;">+994704122271</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6 contact-input">
                     <form action="">
@@ -73,8 +119,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Mövzu</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1"
-                                placeholder="Mövzu">
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Mövzu">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Qeyd</label>
