--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     <!-- Header End -->
     <!-- Main -->
     <main>
-        <div class="container">
+        <div class="container contact-main">
             <div class="row">
                 <div class="col-md-6">
                     <div>
@@ -110,23 +110,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 contact-input">
-                    <form action="">
-                        <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Email Addres</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1"
-                                placeholder="Email Addres">
+                <div class="col-md-6">
+                    <div class="contact-input">
+                        <div class="input-title">
+                            <h3 class="text-primary">
+                                Təklif və iradlarınız üçün:
+
+                            </h3>
                         </div>
-                        <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Mövzu</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Mövzu">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Qeyd</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
-                        <button>Göndər</button>
-                    </form>
+                        <form action="">
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Email Adres</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="Email Addres">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Mövzu</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="Mövzu">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlTextarea1" class="form-label">Qeyd</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <button>Göndər</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
