Contact Almost done...

--- a/contact.html
+++ b/contact.html
@@ -53,18 +53,18 @@
         <div class="container contact-main">
             <div class="row">
                 <div class="col-md-6">
-                    <div>
+                    <div class="contact-main-h1">
                         <h1 class="text-primary">
                             Əlaqə
                         </h1>
                     </div>
-                    <div>
+                    <div class="contact-main-p">
                         <p>Sizinlə ilk tanışlıq CV-niz üzərindən olduğuna görə, bu tanışlıqda maksimum özünüzü
                             göstərmək üçün bizə müraciət edə bilərsiniz.
                         </p>
                     </div>
                     <div class="">
-                        <div class="row social-media">
+                        <div class="row social-media social-contact-icons">
                             <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
                                 <div class=" whatsapp-icon">
                                     <span>
@@ -115,7 +115,6 @@
                         <div class="input-title">
                             <h3 class="text-primary">
                                 Təklif və iradlarınız üçün:
-
                             </h3>
                         </div>
                         <form action="">
@@ -133,7 +132,7 @@
                                 <label for="exampleFormControlTextarea1" class="form-label">Qeyd</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
-                            <button>Göndər</button>
+                            <button type="button" class="btn btn-primary">Göndər</button>
                         </form>
                     </div>
                 </div>
