Changed project name to impulse

--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
                         <a class="nav-link" href="/catalog.html">Kataloq</a>
                     </li>
                     <li class="nav-item nav-item">
-                        <a class="nav-link" href="#">Vakansiyalar</a>
+                        <a class="nav-link" href="vacancy.html">Vakansiyalar</a>
                     </li>
                     <li class="nav-item nav-item">
-                        <a class="nav-link" href="#">Vakansiya Paylaş</a>
+                        <a class="nav-link" href="share-vacancy.html">Vakansiya Paylaş</a>
                     </li>
                     <li class="nav-item nav-item">
                         <a class="nav-link" href="contact.html">Əlaqə</a>
