--- a/vacancy.html
+++ b/vacancy.html
@@ -50,14 +50,27 @@
   <!-- Header End -->
 <!-- Main -->
 <main>
-
+<div class="container-sm">
+  <div class="container">
+    <div class="title">
+      <h1 class="text-primary text-center">Vakansiyalar 2023</h1>
+    </div>
+    <div class="vacancy-wrapper job-list-row row">
+      <div class="job-list">
+        <div class="">
+          <img src="" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </main>
 <!-- Main End -->
 
 <!-- Footer -->
 <div class="footer">
     <div class="col-md-4">
-      <div><img src="/images/logo.webp" alt=""></div>
+      <div class="container-sm"><img src="/images/logo.png" alt=""></div>
     </div>
     <div class="col-md-4">
     </div>
