Vacancies search bar

--- a/vacancy.html
+++ b/vacancy.html
@@ -48,51 +48,92 @@
   </div>
   <!-- Navbar End-->
   <!-- Header End -->
-<!-- Main -->
-<main>
-<div class="container-sm">
-  <div class="container">
-    <div class="title">
-      <h1 class="text-primary text-center">Vakansiyalar 2023</h1>
-    </div>
-    <div class="vacancy-wrapper job-list-row row">
-      <div class="job-list">
-        <div class="">
-          <img src="" alt="">
+  <!-- Main -->
+  <main>
+    <div class="container-sm">
+      <div class="container">
+        <div class="title">
+          <h1 class="text-primary text-center">Vakansiyalar 2023</h1>
         </div>
-      </div>
-    </div>
-  </div>
+        <div class="vacancy-wrapper job-list-row row">
+          <div class="job-list">
+            <div class="">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="container vacancy-search">
+          <div class="container mt-3">
+            <form>
+              <div class="form-group">
+                <label for="options">Şirkət seçin:</label>
+                <select class="form-control-sm" id="options" name="options">
+                  <option value="Option 1">Şirkət 1</option>
+                  <option value="Option 2">Şirkət 2</option>
+                  <option value="Option 3">Şirkət 3</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="options">Şəhər seçin:</label>
+                <select class="form-control-sm" id="options" name="options">
+                  <option value="Option 1">Şəhər 1</option>
+                  <option value="Option 2">Şəhər 2</option>
+                  <option value="Option 3">Şəhər 3</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+
+        <!-- Include Bootstrap JS and jQuery (if needed) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
+</html>
+In this updated code, I've made the search bar and dropdown button smaller by using Bootstrap's form-control-sm and
+btn-sm classes. The dropdown menu should now work as expected. This design is more compact and less attention-grabbing.
+
+
+
+
+
+
+</div>
+</div>
 </div>
 </main>
 <!-- Main End -->
 
 <!-- Footer -->
 <div class="footer">
-    <div class="col-md-4">
-      <div class="container-sm"><img src="/images/logo.png" alt=""></div>
-    </div>
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-4">
-    </div>
-  
+  <div class="col-md-4">
+    <div class="container-sm"><img src="/images/logo.png" alt=""></div>
   </div>
-  <div class="footer-border row">
-    <div class="col-md-4 left-p">
-      <p>Copyright © 2023</p>
-    </div>
-    <div class="col-md-4 right-p">
-      <p>CV-Land</p>
-    </div>
+  <div class="col-md-4">
   </div>
-  <!-- Footer End -->
-  
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
-  
-  </html>
+  <div class="col-md-4">
+  </div>
+
+</div>
+<div class="footer-border row">
+  <div class="col-md-4 left-p">
+    <p>Copyright © 2023</p>
+  </div>
+  <div class="col-md-4 right-p">
+    <p>CV-Land</p>
+  </div>
+</div>
+<!-- Footer End -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</body>
+
+</html>
