Vacany search bars done some design can be made

--- a/vacancy.html
+++ b/vacancy.html
@@ -64,8 +64,8 @@
         </div>
 
         <div class="container vacancy-search">
-          <div class="container mt-3">
-            <form>
+          <div class="container mt-3 row col-md-4">
+            <form class="">
               <div class="form-group">
                 <label for="options">Şirkət seçin:</label>
                 <select class="form-control-sm" id="options" name="options">
@@ -74,6 +74,7 @@
                   <option value="Option 3">Şirkət 3</option>
                 </select>
               </div>
+              <!-- Optionlara foreach vermelisen ki tekce onlar bazadan gelib artsin umumi dive dovr verib hoqqa cixartma -->
               <div class="form-group">
                 <label for="options">Şəhər seçin:</label>
                 <select class="form-control-sm" id="options" name="options">
@@ -82,7 +83,7 @@
                   <option value="Option 3">Şəhər 3</option>
                 </select>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Axtarış</button>
             </form>
           </div>
         </div>
