--- a/vacancy.html
+++ b/vacancy.html
@@ -86,55 +86,43 @@
               <button type="submit" class="btn btn-primary">Axtarış</button>
             </form>
           </div>
+
         </div>
 
-        <!-- Include Bootstrap JS and jQuery (if needed) -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+      </div>
 
-</html>
-In this updated code, I've made the search bar and dropdown button smaller by using Bootstrap's form-control-sm and
-btn-sm classes. The dropdown menu should now work as expected. This design is more compact and less attention-grabbing.
+    </div>
 
+  </main>
+  <!-- Main End -->
 
+  <!-- Footer -->
+  <div class="footer">
+    <div class="col-md-4">
+      <div class="container-sm"><img src="/images/logo.png" alt=""></div>
+    </div>
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
+    </div>
 
-
-
-
-</div>
-</div>
-</div>
-</main>
-<!-- Main End -->
-
-<!-- Footer -->
-<div class="footer">
-  <div class="col-md-4">
-    <div class="container-sm"><img src="/images/logo.png" alt=""></div>
   </div>
-  <div class="col-md-4">
+  <div class="footer-border row">
+    <div class="col-md-4 left-p">
+      <p>Copyright © 2023</p>
+    </div>
+    <div class="col-md-4 right-p">
+      <p>CV-Land</p>
+    </div>
   </div>
-  <div class="col-md-4">
-  </div>
+  <!-- Footer End -->
 
-</div>
-<div class="footer-border row">
-  <div class="col-md-4 left-p">
-    <p>Copyright © 2023</p>
-  </div>
-  <div class="col-md-4 right-p">
-    <p>CV-Land</p>
-  </div>
-</div>
-<!-- Footer End -->
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="/js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
