Writing Add Vacancy

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <b>CV Hazırlanması</b>
                 </h1>
               </div>
-              <div></div>
+              <!-- <div></div> -->
             </div>
             <div class="main-desc">
               <p>
