--- a/catalog.html
+++ b/catalog.html
@@ -58,17 +58,20 @@
           <div class="row">
             <div class="col-md-4 mb-4">
               <div class="image-container">
-                <img src="/images/cv-1.jpg" alt="Image 1" class="img-fluid image" data-toggle="modal" data-target="#myModal1">
+                <img src="/images/cv-1.jpg" alt="Image 1" class="img-fluid image" data-toggle="modal"
+                  data-target="#myModal1">
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="image-container">
-                <img src="/images/cv.jpg" alt="Image 2" class="img-fluid image" data-toggle="modal" data-target="#myModal2">
+                <img src="/images/cv.jpg" alt="Image 2" class="img-fluid image" data-toggle="modal"
+                  data-target="#myModal2">
               </div>
             </div>
             <div class="col-md-4 mb-4">
               <div class="image-container">
-                <img src="/images/cv-1.jpg" alt="Image 3" class="img-fluid image" data-toggle="modal" data-target="#myModal3">
+                <img src="/images/cv-1.jpg" alt="Image 3" class="img-fluid image" data-toggle="modal"
+                  data-target="#myModal3">
               </div>
             </div>
           </div>
@@ -118,42 +121,38 @@
             </div>
           </div>
         </div>
-</body>
 
-</html>
-</figure>
+        <!-- Catalog Main End -->
+  </main>
+  <!-- Main End -->
 
-</div>
-<!-- Catalog Main End -->
-</main>
-<!-- Main End -->
+  <!-- Footer -->
+  <div class="footer">
+    <div class="col-md-4">
+      <div class="container-sm"><img src="/images/logo.png" alt=""></div>
+    </div>
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
+    </div>
 
-<!-- Footer -->
-<div class="footer">
-  <div class="col-md-4">
-    <div class="container-sm"><img src="/images/logo.png" alt=""></div>
   </div>
-  <div class="col-md-4">
+  <div class="footer-border row">
+    <div class="col-md-4 left-p">
+      <p>Copyright © 2023</p>
+    </div>
+    <div class="col-md-4 right-p">
+      <p>CV-Land</p>
+    </div>
   </div>
-  <div class="col-md-4">
-  </div>
+  <!-- Footer End -->
 
-</div>
-<div class="footer-border row">
-  <div class="col-md-4 left-p">
-    <p>Copyright © 2023</p>
-  </div>
-  <div class="col-md-4 right-p">
-    <p>CV-Land</p>
-  </div>
-</div>
-<!-- Footer End -->
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="/js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
