--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -38,11 +38,11 @@
         </head>
         <body>
           <main>
-            <div class="container mt-5">
+            <div class="container mt-5 add-vacancy">
               <form action="" method="post">
                 <div class="form-group">
                   <label for="vacancy-name">Vakansiyanın Adı:</label>
-                  <input type="text" class="form-control" />
+                  <input required type="text" class="form-control" />
                 </div>
                 <div class="form-group">
                   <label for="workForm">İş Forması:</label>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="form-group">
                   <label for="description">Vakansiya üçün açıqlama:</label>
-                  <textarea
+                  <textarea required
                     class="form-control"
                     id="description"
                     rows="5"
@@ -72,7 +72,7 @@
                 <div class="form-group">
                   <label for="logo">Loqo:</label>
                   <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="logo" />
+                    <input required type="file" class="custom-file-input" id="logo" />
                     <label class="custom-file-label" for="logo"
                       >Choose file</label
                     >
