--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -72,7 +72,7 @@
                 <div class="form-group">
                   <label for="logo">Loqo:</label>
                   <div class="custom-file">
-                    <input required type="file" class="custom-file-input" id="logo" />
+                    <input required type="file" class="custom-file-input" id="logo" accept=".jpeg, .jpg, .png" />
                     <label class="custom-file-label" for="logo"
                       >Choose file</label
                     >
