--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -63,7 +63,8 @@
                 </div>
                 <div class="form-group">
                   <label for="description">Vakansiya üçün açıqlama:</label>
-                  <textarea required
+                  <textarea
+                    required
                     class="form-control"
                     id="description"
                     rows="5"
@@ -72,7 +73,13 @@
                 <div class="form-group">
                   <label for="logo">Loqo:</label>
                   <div class="custom-file">
-                    <input required type="file" class="custom-file-input" id="logo" accept=".jpeg, .jpg, .png" />
+                    <input
+                      required
+                      type="file"
+                      class="custom-file-input"
+                      id="logo"
+                      accept=".jpeg, .jpg, .png"
+                    />
                     <label class="custom-file-label" for="logo"
                       >Choose file</label
                     >
@@ -104,6 +111,22 @@
             </div>
           </div>
           <!-- Footer End -->
+          <!-- Still not sure if the code below works or not  -->
+          <script>
+            function checkFileSize() {
+              var fileInput = document.getElementById("logo");
+              var fileSize = fileInput.files[0].size; // File size in bytes
+              var maxSize = 5 * 1024 * 1024; // 5 MB in bytes
+
+              if (fileSize > maxSize) {
+                document.getElementById("fileSizeError").innerHTML =
+                  "File size should be 5 MB or less.";
+                return false; // Prevent form submission
+              }
+
+              return true; // Allow form submission
+            }
+          </script>
 
           <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
