--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -112,21 +112,7 @@
           </div>
           <!-- Footer End -->
           <!-- Still not sure if the code below works or not  -->
-          <script>
-            function checkFileSize() {
-              var fileInput = document.getElementById("logo");
-              var fileSize = fileInput.files[0].size; // File size in bytes
-              var maxSize = 5 * 1024 * 1024; // 5 MB in bytes
-
-              if (fileSize > maxSize) {
-                document.getElementById("fileSizeError").innerHTML =
-                  "File size should be 5 MB or less.";
-                return false; // Prevent form submission
-              }
-
-              return true; // Allow form submission
-            }
-          </script>
+          <script src="/js/main.js"></script>
 
           <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
