--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -77,7 +77,7 @@
                     type="email"
                     class="form-control"
                     id="email"
-                    placeholder="example@example.com"
+                    placeholder=""
                   />
                 </div>
                 <div class="form-group">
