--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -17,18 +17,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/media.css" />
   </head>
   <body>
     <!-- Main -->
+
     <main>
       <div class="container">
         <div>
           <h1 class="text-primary">Vakansiya Haqqında Məlumat</h1>
         </div>
       </div>
-
       <div class="container mt-5 add-vacancy">
         <form action="" method="post">
           <div class="form-group">
@@ -61,16 +65,7 @@
               rows="5"
             ></textarea>
           </div>
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input
-              required
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder=""
-            />
-          </div>
+
           <div class="form-group">
             <label for="logo">Loqo:</label>
             <div class="custom-file">
