--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -65,7 +65,16 @@
               rows="5"
             ></textarea>
           </div>
-
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input
+              required
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="example@example.com"
+            />
+          </div>
           <div class="form-group">
             <label for="logo">Loqo:</label>
             <div class="custom-file">
