--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -57,6 +57,14 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="workType">Şəhər:</label>
+            <select class="form-control" id="workType">
+              <option value="fullTime">Bakı</option>
+              <option value="partTime">Gəncə</option>
+              <option value="freelance">Neftçala</option>
+            </select>
+          </div>
+          <div class="form-group">
             <label for="description">Vakansiya üçün açıqlama:</label>
             <textarea
               required
