Added a few more options to the AddVacancy

--- a/add-vacancy.html
+++ b/add-vacancy.html
@@ -57,11 +57,27 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="workType">İşin kateqoriyası:</label>
+            <select class="form-control" id="workType">
+              <option value="">Proqramlaşdırma</option>
+              <option value="">DevOps</option>
+              <option value="">Maliyyə</option>
+            </select>
+          </div>
+          <div class="form-group">
             <label for="workType">Şəhər:</label>
             <select class="form-control" id="workType">
-              <option value="fullTime">Bakı</option>
-              <option value="partTime">Gəncə</option>
-              <option value="freelance">Neftçala</option>
+              <option value="">Bakı</option>
+              <option value="">Gəncə</option>
+              <option value="">Neftçala</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="workType">Təcrübə:</label>
+            <select class="form-control" id="workType">
+              <option value="">1 ildən 3 ilə kimi</option>
+              <option value="">5 il</option>
+              <option value="">1 ildən az</option>
             </select>
           </div>
           <div class="form-group">
